# hello-bgfx

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  templatewindow.hpp
primitives/: cube.hpp
shaders/: fs_simple.sc  vs_simple.sc
src/: camera.hpp  main.cpp  template-window.hpp  templatewindow.hpp
src/primitives/: abstract-primitive.hpp  cube.hpp  sphere.hpp
